# interior-design-agent

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
core/: constants.py  (+3 more)
interior-content-skill/: .gitignore  README.md  SKILL.md  pyproject.toml
interior-content-skill/core/: collect_loader.py  orchestrator.py
interior-content-skill/core/agents/analyzer/: SKILL.md  agent.py
interior-content-skill/core/agents/copywriter/: SKILL.md  agent.py
interior-content-skill/core/agents/generator/: SKILL.md
interior-content-skill/core/agents/prompter/: agent.py
interior-content-skill/data/runs/: .gitkeep
interior-content-skill/examples/collect-sample/2026-06-27_北京星河湾313㎡大平层｜静奢老钱风/: full_text_snapshot.txt  metadata.json
interior-content-skill/examples/collect-sample/上海设计师/2026-06-27_再冷漠的人！看到302㎡自然家也会心动😭/: body.txt  full_text_snapshot.txt  metadata.json  采集状态.txt
interior-content-skill/examples/collect-sample/上海设计师/2026-06-27_看完198㎡侘寂自然风，我只想进去养老😭/: metadata.json  采集状态.txt
interior-content-skill/examples/collect-sample/六伊设计/2026-06-27_六伊设计丨一家敢为结果负责的设计公司/: full_text_snapshot.txt  image_urls.txt  metadata.json
interior-content-skill/scripts/: run_from_collect.py
interior-content-skill/server/: main.py
interior-content-skill/web/: README.md  index.html  package-lock.json  package.json  vite.config.js
interior-content-skill/web/src/: App.jsx  index.css
interior-content-skill/web/src/components/: AgentNode.jsx  GeneratingView.jsx  HeroBackground.jsx  ImageGallery.jsx  InputView.jsx  NavBar.jsx  ResultView.jsx  XhsPostCard.jsx
(+189 files in other folders)
